--- a/Base/Base.vcxproj.filters
+++ b/Base/Base.vcxproj.filters
@@ -61,6 +61,18 @@
     <Filter Include="Header Files\Shadow">
       <UniqueIdentifier>{c483814b-b1a5-48d7-a0cc-4ff2433b0bd7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\GameObject">
+      <UniqueIdentifier>{004c0459-7404-4ac5-a796-2870c6931f9d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\GameObject">
+      <UniqueIdentifier>{bc456fb3-f8c3-4f1f-afba-beb58b937da1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Physics">
+      <UniqueIdentifier>{7933db6e-a77f-4df2-a319-99c9c0b84078}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Physics">
+      <UniqueIdentifier>{cfa61c9f-9fdb-4654-8ffd-9356db024ed2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Controller.cpp">
@@ -143,6 +155,12 @@
     </ClCompile>
     <ClCompile Include="Source\MapManager.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GameObject.cpp">
+      <Filter>Source Files\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Physics.cpp">
+      <Filter>Source Files\Physics</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -232,6 +250,12 @@
     </ClInclude>
     <ClInclude Include="Source\MapManager.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Physics.h">
+      <Filter>Header Files\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GameObject.h">
+      <Filter>Header Files\GameObject</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
