GameObject (done by Rayson assisted by Yie Cher)

--- a/Base/Base.vcxproj.filters
+++ b/Base/Base.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClCompile Include="Source\StateManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Collision.cpp">
+      <Filter>Header Files\AABB</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Controller.h">
