--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\GDT%2714\SP3\Base\Source\Player.cpp" />
     <ClCompile Include="Source\BoundBox_2D.cpp" />
     <ClCompile Include="Source\BoundBox_3D.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
@@ -48,6 +49,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\GDT%2714\SP3\Base\Source\Inventory.h" />
     <ClInclude Include="..\..\..\GDT%2714\SP3\Base\Source\Item.h" />
+    <ClInclude Include="..\..\..\GDT%2714\SP3\Base\Source\Player.h" />
     <ClInclude Include="Source\BoundBox.h" />
     <ClInclude Include="Source\BoundBox_2D.h" />
     <ClInclude Include="Source\BoundBox_3D.h" />
