Improvement. AABB for tile map. Render tile map now renders in world space, not rendered on screen.

--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -15,7 +15,6 @@
     <ClCompile Include="Source\BoundBox_3D.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\Camera3.cpp" />
-    <ClCompile Include="Source\Character.cpp" />
     <ClCompile Include="Source\CollideBox.cpp" />
     <ClCompile Include="Source\Collision.cpp" />
     <ClCompile Include="Source\Controller.cpp" />
@@ -44,6 +43,7 @@
     <ClCompile Include="Source\SpriteAnimation.cpp" />
     <ClCompile Include="Source\StateManager.cpp" />
     <ClCompile Include="Source\StaticObject.cpp" />
+    <ClCompile Include="Source\TileObject.cpp" />
     <ClCompile Include="Source\utilities.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
     <ClCompile Include="Source\View.cpp" />
@@ -56,7 +56,7 @@
     <ClInclude Include="Source\BoundBox_3D.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\Camera3.h" />
-    <ClInclude Include="Source\Character.h" />
+    <ClInclude Include="Source\Collision.h" />
     <ClInclude Include="Source\Controller.h" />
     <ClInclude Include="Source\DepthFBO.h" />
     <ClInclude Include="Source\FontData.h" />
@@ -82,6 +82,7 @@
     <ClInclude Include="Source\SpriteAnimation.h" />
     <ClInclude Include="Source\StateManager.h" />
     <ClInclude Include="Source\StaticObject.h" />
+    <ClInclude Include="Source\TileObject.h" />
     <ClInclude Include="Source\utilities.h" />
     <ClInclude Include="Source\Utility.h" />
     <ClInclude Include="Source\Vertex.h" />
