--- a/Base/Base.vcxproj.filters
+++ b/Base/Base.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClCompile Include="Source\TileObject.cpp">
       <Filter>Source Files\GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Controller.h">
@@ -310,6 +313,9 @@
     </ClInclude>
     <ClInclude Include="Source\TileObject.h">
       <Filter>Header Files\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Enemy.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
