Level3 done. Now to merge without destroying anything...

--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -36,17 +36,24 @@
     <ClCompile Include="Source\MiniMap.cpp" />
     <ClCompile Include="Source\Model.cpp" />
     <ClCompile Include="Source\Model_2D.cpp" />
-    <ClCompile Include="Source\Model_3D.cpp" />
+    <ClCompile Include="Source\Model_Level.cpp" />
+    <ClCompile Include="Source\Model_Level1.cpp" />
+    <ClCompile Include="Source\Model_Level2.cpp" />
+    <ClCompile Include="Source\Model_Level3.cpp" />
     <ClCompile Include="Source\Object.cpp" />
     <ClCompile Include="Source\Ogre.cpp" />
     <ClCompile Include="Source\Physics.cpp" />
     <ClCompile Include="Source\Player.cpp" />
+    <ClCompile Include="Source\Puzzle.cpp" />
+    <ClCompile Include="Source\PuzzleManager.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\SoundManager.cpp" />
     <ClCompile Include="Source\SpriteAnimation.cpp" />
     <ClCompile Include="Source\StateManager.cpp" />
     <ClCompile Include="Source\StaticObject.cpp" />
     <ClCompile Include="Source\TileObject.cpp" />
+    <ClCompile Include="Source\TriggerObject.cpp" />
+    <ClCompile Include="Source\UI_Object.cpp" />
     <ClCompile Include="Source\utilities.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
     <ClCompile Include="Source\View.cpp" />
@@ -78,17 +85,24 @@
     <ClInclude Include="Source\MiniMap.h" />
     <ClInclude Include="Source\Model.h" />
     <ClInclude Include="Source\Model_2D.h" />
-    <ClInclude Include="Source\model_3D.h" />
+    <ClInclude Include="Source\Model_Level.h" />
+    <ClInclude Include="Source\Model_Level1.h" />
+    <ClInclude Include="Source\Model_Level2.h" />
+    <ClInclude Include="Source\Model_Level3.h" />
     <ClInclude Include="Source\Object.h" />
     <ClInclude Include="Source\Ogre.h" />
     <ClInclude Include="Source\Physics.h" />
     <ClInclude Include="Source\Player.h" />
+    <ClInclude Include="Source\Puzzle.h" />
+    <ClInclude Include="Source\PuzzleManager.h" />
     <ClInclude Include="Source\shader.hpp" />
     <ClInclude Include="Source\SoundManager.h" />
     <ClInclude Include="Source\SpriteAnimation.h" />
     <ClInclude Include="Source\StateManager.h" />
     <ClInclude Include="Source\StaticObject.h" />
     <ClInclude Include="Source\TileObject.h" />
+    <ClInclude Include="Source\TriggerObject.h" />
+    <ClInclude Include="Source\UI_Object.h" />
     <ClInclude Include="Source\utilities.h" />
     <ClInclude Include="Source\Utility.h" />
     <ClInclude Include="Source\Vertex.h" />
