--- a/Base/Base.vcxproj
+++ b/Base/Base.vcxproj
@@ -41,6 +41,7 @@
     <ClCompile Include="Source\Model_Level2.cpp" />
     <ClCompile Include="Source\Model_Level3.cpp" />
     <ClCompile Include="Source\Model_Level4.cpp" />
+    <ClCompile Include="Source\Model_Level5.cpp" />
     <ClCompile Include="Source\Model_Screen.cpp" />
     <ClCompile Include="Source\Object.cpp" />
     <ClCompile Include="Source\Ogre.cpp" />
@@ -95,6 +96,7 @@
     <ClInclude Include="Source\Model_Level2.h" />
     <ClInclude Include="Source\Model_Level3.h" />
     <ClInclude Include="Source\Model_Level4.h" />
+    <ClInclude Include="Source\Model_Level5.h" />
     <ClInclude Include="Source\Model_Screen.h" />
     <ClInclude Include="Source\Object.h" />
     <ClInclude Include="Source\Ogre.h" />
